tests/ui/parser-manual-impl.rs
use palc::Parser;

struct Cli {}

impl Parser for Cli {}

fn main() {}
